Add static site

--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file source-language="en" target-language="fr" datatype="plaintext" original="file.ext">
+  <file source-language="fr" target-language="fr" datatype="plaintext" original="file.ext">
     <header>
       <tool tool-id="symfony" tool-name="Symfony"/>
     </header>
@@ -88,6 +88,276 @@
       <trans-unit id="lvqenjW" resname="Create and add new">
         <source>Create and add new</source>
         <target>Créer et ajouter nouveau</target>
+      </trans-unit>
+      <trans-unit id="yQqXftK" resname="Password is empty">
+        <source>Password is empty</source>
+        <target>__Password is empty</target>
+      </trans-unit>
+      <trans-unit id="Rrau0Jc" resname="Passwords not valid">
+        <source>Passwords not valid</source>
+        <target>__Passwords not valid</target>
+      </trans-unit>
+      <trans-unit id="kZWgQW0" resname="Passwords are not equals">
+        <source>Passwords are not equals</source>
+        <target>__Passwords are not equals</target>
+      </trans-unit>
+      <trans-unit id="HLC6El_" resname="Information">
+        <source>Information</source>
+        <target>__Information</target>
+      </trans-unit>
+      <trans-unit id="dhear8Q" resname="Addresses">
+        <source>Addresses</source>
+        <target>__Addresses</target>
+      </trans-unit>
+      <trans-unit id="9IMKHa4" resname="Schedule">
+        <source>Schedule</source>
+        <target>__Schedule</target>
+      </trans-unit>
+      <trans-unit id="2U6vaUO" resname="Modify">
+        <source>Modify</source>
+        <target>__Modify</target>
+      </trans-unit>
+      <trans-unit id="GXZu1sy" resname="Cancel">
+        <source>Cancel</source>
+        <target>__Cancel</target>
+      </trans-unit>
+      <trans-unit id="9RI_lRr" resname="Web site">
+        <source>Web site</source>
+        <target>__Web site</target>
+      </trans-unit>
+      <trans-unit id="HMk_RZZ" resname="Facebook page">
+        <source>Facebook page</source>
+        <target>__Facebook page</target>
+      </trans-unit>
+      <trans-unit id="FQn1YfJ" resname="Save">
+        <source>Save</source>
+        <target>__Save</target>
+      </trans-unit>
+      <trans-unit id="Vu_PIJV" resname="Address">
+        <source>Address</source>
+        <target>__Address</target>
+      </trans-unit>
+      <trans-unit id=".DP3Mkb" resname="City">
+        <source>City</source>
+        <target>__City</target>
+      </trans-unit>
+      <trans-unit id=".GbXqym" resname="Zip code">
+        <source>Zip code</source>
+        <target>__Zip code</target>
+      </trans-unit>
+      <trans-unit id="E2yH3sR" resname="County">
+        <source>County</source>
+        <target>__County</target>
+      </trans-unit>
+      <trans-unit id="cB0CHQj" resname="Country">
+        <source>Country</source>
+        <target>__Country</target>
+      </trans-unit>
+      <trans-unit id="ScJmuqq" resname="Search">
+        <source>Search</source>
+        <target>Rechercher</target>
+      </trans-unit>
+      <trans-unit id="Mt3wPWX" resname="Hi %name%">
+        <source>Hi %name%</source>
+        <target>__Hi %name%</target>
+      </trans-unit>
+      <trans-unit id="8GioAbg" resname="In response to your request, we invite you to click on the button below to set a new password">
+        <source>In response to your request, we invite you to click on the button below to set a new password</source>
+        <target>__In response to your request, we invite you to click on the button below to set a new password</target>
+      </trans-unit>
+      <trans-unit id="2USNlhL" resname="Reset my password">
+        <source>Reset my password</source>
+        <target>__Reset my password</target>
+      </trans-unit>
+      <trans-unit id="qdzuFtV" resname="Or copy and paste the following link into your browser">
+        <source>Or copy and paste the following link into your browser</source>
+        <target>__Or copy and paste the following link into your browser</target>
+      </trans-unit>
+      <trans-unit id="awzJBNC" resname="Users">
+        <source>Users</source>
+        <target>__Users</target>
+      </trans-unit>
+      <trans-unit id="YG48Hy2" resname="Enter your new password">
+        <source>Enter your new password</source>
+        <target>__Enter your new password</target>
+      </trans-unit>
+      <trans-unit id="EKpYGOk" resname="Repeat the password">
+        <source>Repeat the password</source>
+        <target>__Repeat the password</target>
+      </trans-unit>
+      <trans-unit id="wcEAnT8" resname="Update">
+        <source>Update</source>
+        <target>__Update</target>
+      </trans-unit>
+      <trans-unit id="F8Mg07H" resname="Mail maybe sent. Check your mailbox">
+        <source>Mail maybe sent. Check your mailbox</source>
+        <target>__Mail maybe sent. Check your mailbox</target>
+      </trans-unit>
+      <trans-unit id="u0L4zVJ" resname="Forgot password">
+        <source>Forgot password</source>
+        <target>__Forgot password</target>
+      </trans-unit>
+      <trans-unit id=".C6FS7t" resname="Send me">
+        <source>Send me</source>
+        <target>__Send me</target>
+      </trans-unit>
+      <trans-unit id="acVpEs4" resname="You are logged in as">
+        <source>You are logged in as</source>
+        <target>__You are logged in as</target>
+      </trans-unit>
+      <trans-unit id="0FJ_Sz1" resname="Logout">
+        <source>Logout</source>
+        <target>__Logout</target>
+      </trans-unit>
+      <trans-unit id="dDUw20Q" resname="Please sign in">
+        <source>Please sign in</source>
+        <target>__Please sign in</target>
+      </trans-unit>
+      <trans-unit id="8IcIH2c" resname="Forgot my password ?">
+        <source>Forgot my password ?</source>
+        <target>__Forgot my password ?</target>
+      </trans-unit>
+      <trans-unit id="6VEx8e3" resname="Access &amp; roles">
+        <source>Access &amp; roles</source>
+        <target><![CDATA[__Access & roles]]></target>
+      </trans-unit>
+      <trans-unit id="izug0xd" resname="Modifications">
+        <source>Modifications</source>
+        <target>__Modifications</target>
+      </trans-unit>
+      <trans-unit id="lT3W8rR" resname="Sex">
+        <source>Sex</source>
+        <target>__Sex</target>
+      </trans-unit>
+      <trans-unit id="c5VgHdg" resname="Zipcode">
+        <source>Zipcode</source>
+        <target>__Zipcode</target>
+      </trans-unit>
+      <trans-unit id="Y9zriAC" resname="Phone">
+        <source>Phone</source>
+        <target>__Phone</target>
+      </trans-unit>
+      <trans-unit id="sMg_Txq" resname="Phone emergency">
+        <source>Phone emergency</source>
+        <target>__Phone emergency</target>
+      </trans-unit>
+      <trans-unit id="j7G2oUj" resname="Nationality">
+        <source>Nationality</source>
+        <target>__Nationality</target>
+      </trans-unit>
+      <trans-unit id="4d1.7xF" resname="Mails">
+        <source>Mails</source>
+        <target>__Mails</target>
+      </trans-unit>
+      <trans-unit id="5Q33cP_" resname="User created">
+        <source>User created</source>
+        <target><![CDATA[Utilisateur cr&eacute;&eacute;]]></target>
+      </trans-unit>
+      <trans-unit id="NzGXYk6" resname="Emails">
+        <source>Emails</source>
+        <target>Emails</target>
+      </trans-unit>
+      <trans-unit id="PN..9Ga" resname="Adress">
+        <source>Adress</source>
+        <target>Adresse</target>
+      </trans-unit>
+      <trans-unit id="x2uBnc2" resname="%age% years old">
+        <source>%age% years old</source>
+        <target>%age% years old</target>
+      </trans-unit>
+      <trans-unit id="iDwNyl8" resname="Int&amp;eacute;ress&amp;eacute; par...">
+        <source>Int&amp;eacute;ress&amp;eacute; par...</source>
+        <target><![CDATA[Int&eacute;ress&eacute; par...]]></target>
+      </trans-unit>
+      <trans-unit id="k8zyAkH" resname="TAEKWON KIDO, SINKIDO, TAEKWONDO, HAPKIDO, KHIDO">
+        <source>TAEKWON KIDO, SINKIDO, TAEKWONDO, HAPKIDO, KHIDO</source>
+        <target>TAEKWON KIDO, SINKIDO, TAEKWONDO, HAPKIDO, KHIDO</target>
+      </trans-unit>
+      <trans-unit id="S7s7_CC" resname="Alors peut-&amp;ecirc;tre trouverez-vous un club proche de chez vous !">
+        <source>Alors peut-&amp;ecirc;tre trouverez-vous un club proche de chez vous !</source>
+        <target><![CDATA[Alors peut-&ecirc;tre trouverez-vous un club proche de chez vous !]]></target>
+      </trans-unit>
+      <trans-unit id="VwmKBVB" resname="Chercher un club &amp;raquo;">
+        <source>Chercher un club &amp;raquo;</source>
+        <target><![CDATA[Chercher un club &raquo;]]></target>
+      </trans-unit>
+      <trans-unit id="zOOCyyL" resname="Le C&amp;eacute;nacle">
+        <source>Le C&amp;eacute;nacle</source>
+        <target><![CDATA[Le C&eacute;nacle]]></target>
+      </trans-unit>
+      <trans-unit id="lbEdHKH" resname="Le Cénacle Rémi Mollet est une école d'arts martiaux français et asiatiques sous la direction technique de Maître Rémi Mollet. Doté d'une expérience de plus de 45 ans,&#10;Maître Rémi Mollet, assisté de ses ceintures noires, enseigne le Taekwonkido, le Taekwondo, le Hapkido, le Gumdo et d'autres arts martiaux dans une trentaine de clubs&#10;dispatchés dans toute la France.">
+        <source>Le Cénacle Rémi Mollet est une école d'arts martiaux français et asiatiques sous la direction technique de Maître Rémi Mollet. Doté d'une expérience de plus de 45 ans,
+Maître Rémi Mollet, assisté de ses ceintures noires, enseigne le Taekwonkido, le Taekwondo, le Hapkido, le Gumdo et d'autres arts martiaux dans une trentaine de clubs
+dispatchés dans toute la France.</source>
+        <target>Le Cénacle Rémi Mollet est une école d'arts martiaux français et asiatiques sous la direction technique de Maître Rémi Mollet. Doté d'une expérience de plus de 45 ans,
+Maître Rémi Mollet, assisté de ses ceintures noires, enseigne le Taekwonkido, le Taekwondo, le Hapkido, le Gumdo et d'autres arts martiaux dans une trentaine de clubs
+dispatchés dans toute la France.</target>
+      </trans-unit>
+      <trans-unit id="i3EdIIr" resname="Taekwonkido">
+        <source>Taekwonkido</source>
+        <target>Taekwonkido</target>
+      </trans-unit>
+      <trans-unit id="lY4SlZn" resname="Le Taekwonkido® est une méthode éducative, fondée par Me Rémi&#10;Mollet et le Dr. Jean-Laurent Taddeï, synthétisant les techniques de Karaté,&#10;Taekwondo, de Hapkido, de Gumdo (sabre), d’arts martiaux coréens et surtout de&#10;Khido, méthode supérieure instaurée par Me Michel Morlon, créée en 1984.">
+        <source>Le Taekwonkido® est une méthode éducative, fondée par Me Rémi
+Mollet et le Dr. Jean-Laurent Taddeï, synthétisant les techniques de Karaté,
+Taekwondo, de Hapkido, de Gumdo (sabre), d’arts martiaux coréens et surtout de
+Khido, méthode supérieure instaurée par Me Michel Morlon, créée en 1984.</source>
+        <target>Le Taekwonkido® est une méthode éducative, fondée par Me Rémi
+Mollet et le Dr. Jean-Laurent Taddeï, synthétisant les techniques de Karaté,
+Taekwondo, de Hapkido, de Gumdo (sabre), d’arts martiaux coréens et surtout de
+Khido, méthode supérieure instaurée par Me Michel Morlon, créée en 1984.</target>
+      </trans-unit>
+      <trans-unit id="7cJT2KH" resname="En savoir plus &amp;raquo;">
+        <source>En savoir plus &amp;raquo;</source>
+        <target><![CDATA[En savoir plus &raquo;]]></target>
+      </trans-unit>
+      <trans-unit id="WJg8xer" resname="Taekwondo">
+        <source>Taekwondo</source>
+        <target>Taekwondo</target>
+      </trans-unit>
+      <trans-unit id="AZhwXzX" resname="Le Taekwondo, discipline olympique, est un art martial sans armes &#10;et l’esprit dans lequel il est pratiqué entraîne obligatoirement &#10;courtoisie, loyauté, persévérance, maîtrise de soi, combativité &#10;sans agressivité.">
+        <source>Le Taekwondo, discipline olympique, est un art martial sans armes 
+et l’esprit dans lequel il est pratiqué entraîne obligatoirement 
+courtoisie, loyauté, persévérance, maîtrise de soi, combativité 
+sans agressivité.</source>
+        <target>Le Taekwondo, discipline olympique, est un art martial sans armes 
+et l’esprit dans lequel il est pratiqué entraîne obligatoirement 
+courtoisie, loyauté, persévérance, maîtrise de soi, combativité 
+sans agressivité.</target>
+      </trans-unit>
+      <trans-unit id="LSXk7wg" resname="Hapkido">
+        <source>Hapkido</source>
+        <target>Hapkido</target>
+      </trans-unit>
+      <trans-unit id="HmLlT7M" resname="Le Hapkido a été fondé par Me. CHOI Yong Sul  qui partit pour le Japon en &#10;1912 où il fut adopté par la famille de Sokaku Takeda avec qui il &#10;s’entraîna durant 30 ans.">
+        <source>Le Hapkido a été fondé par Me. CHOI Yong Sul  qui partit pour le Japon en 
+1912 où il fut adopté par la famille de Sokaku Takeda avec qui il 
+s’entraîna durant 30 ans.</source>
+        <target>Le Hapkido a été fondé par Me. CHOI Yong Sul  qui partit pour le Japon en 
+1912 où il fut adopté par la famille de Sokaku Takeda avec qui il 
+s’entraîna durant 30 ans.</target>
+      </trans-unit>
+      <trans-unit id="Y_9v0vy" resname="Sinkido Self-Défense Système">
+        <source>Sinkido Self-Défense Système</source>
+        <target>Sinkido Self-Défense Système</target>
+      </trans-unit>
+      <trans-unit id="EgZb6V_" resname="Le Sinkido Self-Défense Système est une méthode qui s'adresse exclusivement aux adultes et aux seniors.&#10;C'est un programme d'autodéfense accessible, axé sur l'efficacité, il est directement applicable en combat réel.">
+        <source>Le Sinkido Self-Défense Système est une méthode qui s'adresse exclusivement aux adultes et aux seniors.
+C'est un programme d'autodéfense accessible, axé sur l'efficacité, il est directement applicable en combat réel.</source>
+        <target>Le Sinkido Self-Défense Système est une méthode qui s'adresse exclusivement aux adultes et aux seniors.
+C'est un programme d'autodéfense accessible, axé sur l'efficacité, il est directement applicable en combat réel.</target>
+      </trans-unit>
+      <trans-unit id="6P3tRPC" resname="Cenacle">
+        <source>Cenacle</source>
+        <target><![CDATA[Cénacle]]></target>
+      </trans-unit>
+      <trans-unit id="ors0eAr" resname="Master">
+        <source>Master</source>
+        <target><![CDATA[Maître]]></target>
+      </trans-unit>
+      <trans-unit id="mx9drwo" resname="Sports">
+        <source>Sports</source>
+        <target>Disciplines</target>
       </trans-unit>
     </body>
   </file>
