--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -349,16 +349,100 @@ C'est un programme d'autodéfense accessible, axé sur l'efficacité, il est dir
       </trans-unit>
       <trans-unit id="6P3tRPC" resname="Cenacle">
         <source>Cenacle</source>
-        <target><![CDATA[Cénacle]]></target>
+        <target>Cénacle</target>
       </trans-unit>
       <trans-unit id="ors0eAr" resname="Master">
         <source>Master</source>
-        <target><![CDATA[Maître]]></target>
+        <target>Maître</target>
       </trans-unit>
       <trans-unit id="mx9drwo" resname="Sports">
         <source>Sports</source>
         <target>Disciplines</target>
       </trans-unit>
+      <trans-unit id="S2fwhE9" resname="Club not found">
+        <source>Club not found</source>
+        <target>__Club not found</target>
+      </trans-unit>
+      <trans-unit id="XV7hV3U" resname="Presentation">
+        <source>Presentation</source>
+        <target>__Presentation</target>
+      </trans-unit>
+      <trans-unit id="IehJKTi" resname="Hours">
+        <source>Hours</source>
+        <target>Horaires</target>
+      </trans-unit>
+      <trans-unit id="k8kchR5" resname="Price">
+        <source>Price</source>
+        <target>Tarifs</target>
+      </trans-unit>
+      <trans-unit id="FbYZdLJ" resname="Location">
+        <source>Location</source>
+        <target>Où s'entraîner ?</target>
+      </trans-unit>
+      <trans-unit id="K1w9JnI" resname="Contact">
+        <source>Contact</source>
+        <target>__Contact</target>
+      </trans-unit>
+      <trans-unit id="T.OCpnz" resname="Le Maître">
+        <source>Le Maître</source>
+        <target>Le Maître</target>
+      </trans-unit>
+      <trans-unit id="G8m.mhi" resname="Le Cénacle Rémi Mollet est une école d'Arts Martiaux Français, Coréens et asiatiques.&#10;On y enseigne principalement le Taekwonkido, Taekwondo, mais aussi le Hapkido et le Gumdo.&#10;Le Cénacle est composé d'une trentaine de clubs (dojang) répartis dans &#10;toute la France. Il y a même un club aux Pays-Bas et des sympathisants en Suisse, en Angleterre, etc.">
+        <source>Le Cénacle Rémi Mollet est une école d'Arts Martiaux Français, Coréens et asiatiques.
+On y enseigne principalement le Taekwonkido, Taekwondo, mais aussi le Hapkido et le Gumdo.
+Le Cénacle est composé d'une trentaine de clubs (dojang) répartis dans 
+toute la France. Il y a même un club aux Pays-Bas et des sympathisants en Suisse, en Angleterre, etc.</source>
+        <target>__Le Cénacle Rémi Mollet est une école d'Arts Martiaux Français, Coréens et asiatiques.
+On y enseigne principalement le Taekwonkido, Taekwondo, mais aussi le Hapkido et le Gumdo.
+Le Cénacle est composé d'une trentaine de clubs (dojang) répartis dans 
+toute la France. Il y a même un club aux Pays-Bas et des sympathisants en Suisse, en Angleterre, etc.</target>
+      </trans-unit>
+
+      <trans-unit id="club-bry-pres-1" resname="club-bry-pres-1">
+        <source>club-bry-pres-1</source>
+        <target><![CDATA[Le club KORYO TAEKWONDO BRY-SUR-MARNE a été fondé en 1988.
+Les cours "enfants" (6-12 ans) et "adultes" (13 ans et plus), sont distincts.
+Bon nombre de cours adultes sont assurés par Maître Rémi Mollet, expert renommé internationalement.
+Enseignant le TAEKWONDO-TAEKWONKIDO, le HAPKIDO et le GUMDO (sabre coréen), le club s’est fait depuis plus de 20 ans une spécialité des arts martiaux coréens.
+Partageant beaucoup d'activités en commun avec d'autres associations, le club permet une synergie entre les élèves et surtout leur donne la possibilité de s'entraîner pratiquement tous les jours.
+Même si son palmarès sportif en compétition a été des plus impressionnants, l’optique du club n’est pas seulement de former des champions. Pourtant, parmi les nombreux élèves que le club a formés, certains ont brillé sous les plus hauts feux de la compétition : Et l’on ne compte plus les Champions (et Championnes !). citons par exemple Thierry TROUDART qui remporta la Médaille d’Or à la Coupe de Méditerranée et fut 3ème au Championnat du Monde en 1993 à New-York. Ces quelques résultats n’excluent évidemment pas d’autres motivations pour les élèves, telles que bien être, autodéfense, effort physique, correction, art de vivre, etc.
+]]></target>
+      </trans-unit>
+
+      <trans-unit id="club-bry-pres-2" resname="club-bry-pres-2">
+        <source>club-bry-pres-2</source>
+        <target><![CDATA[
+L’idée de notre association est de toujours rester proche de la source coréenne : nos adeptes vont donc régulièrement en Corée et, chaque année, nous invitons de grands-maîtres de Taekwondo et d’autres arts martiaux coréens afin d’animer des stages pour nous seulement. Notre but n’est donc pas de pratiquer un Taekwondo "franco-français" mais l’art martial tel qu’il est pratiqué au pays du Matin Calme. Notre école directe est le CHUNG DO KWAN, la toute première école de Taekwondo, fondée à Séoul en 1944 !
+Toutefois, la spécificité du club est de ne pas seulement enseigner le Taekwondo mais aussi le
+TAEKWONKIDO. L’école du Taekwonkido, basée sur une pratique réfléchie et plus réaliste, est fondée sur le combat réel et l’autodéfense.
+A partir du Khido du Grand-Maître Michel Morlon, deux experts
+français Maître Rémi Mollet et Maître Jean-Laurent Taddeï, médecin
+spécialisé dans le sport, ont ajouté leur vécu technique et ont fait évoluer
+le Khido en y introduisant notamment des techniques de Taekwondo, de
+Hapkido, de Gumdo (sabre) et d’autres martiaux. Le Taekwonkido est
+une école particulièrement complète et dynamique qui axe son travail sur
+le combat réel et l’autodéfense.
+Deux aspects sont principalement développés : une recherche de la
+force maximale fondée notamment sur l’utilisation de l’énergie cinétique
+et de principes physiques ; un travail réaliste de l’autodéfense qui passe
+par l’utilisation d’une grande palette technique : clés, projections, contrôles
+articulaires, étranglements, low kicks, coups de poing au visage, coups
+de coude, coups de genou, etc.
+]]></target>
+      </trans-unit>
+
+      <trans-unit id="club-bry-pres-3" resname="club-bry-pres-3">
+        <source>club-bry-pres-3</source>
+        <target><![CDATA[
+Le club KORYO TAEKWONDO BRY-SUR-MARNE a été fondé en 1988.
+Les cours "enfants" (6-12 ans) et "adultes" (13 ans et plus), sont distincts.
+Bon nombre de cours adultes sont assurés par Maître Rémi Mollet, expert renommé internationalement.
+Enseignant le TAEKWONDO-TAEKWONKIDO, le HAPKIDO et le GUMDO (sabre coréen), le club s’est fait depuis plus de 20 ans une spécialité des arts martiaux coréens.
+Partageant beaucoup d'activités en commun avec d'autres associations, le club permet une synergie entre les élèves et surtout leur donne la possibilité de s'entraîner pratiquement tous les jours.
+Même si son palmarès sportif en compétition a été des plus impressionnants, l’optique du club n’est pas seulement de former des champions. Pourtant, parmi les nombreux élèves que le club a formés, certains ont brillé sous les plus hauts feux de la compétition : Et l’on ne compte plus les Champions (et Championnes !). citons par exemple Thierry TROUDART qui remporta la Médaille d’Or à la Coupe de Méditerranée et fut 3ème au Championnat du Monde en 1993 à New-York. Ces quelques résultats n’excluent évidemment pas d’autres motivations pour les élèves, telles que bien être, autodéfense, effort physique, correction, art de vivre, etc.
+]]></target>
+      </trans-unit>
+     
     </body>
   </file>
 </xliff>
